# brewski

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  notes.md  package-lock.json  package.json  redocly.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
migrate/: Cargo.toml
migrate/src/: main.rs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_recipe_versioning.sql  002_water_chemistry.sql  003_equipment_profile_enhancements.sql  004_hopstand_temp_rename.sql  004_user_ingredients.sql  005_batches.sql  005_normalize_seeded_ingredient_casing.sql  006_batch_brew_day.sql  007_batch_carbonation.sql  008_starter_recipes.sql  009_example_recipe_water_profiles.sql  010_recipe_image.sql  011_batch_attachments.sql  012_migrate_conditioning_to_packaged.sql  013_misc_unit.sql  014_equipment_profile_parity.sql  015_drop_tun_volume_l.sql  016_rename_lauter_to_mash_tun_deadspace.sql  017_recipe_version_content_hash.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.gen.rs  models.rs  recipe_hash.rs  sync_config.rs  test_helpers.rs
src-tauri/src/brewing/: abv.rs  beerxml_fixture.rs  carbonation.rs  color.rs  gravity.rs  hydro.rs  ibu.rs  mod.rs  og.rs  pitch.rs  refractometer.rs  srm.rs  strike.rs  volumes.rs  water.rs
src-tauri/src/commands/: additions.rs  batch_attachments.rs  batches.rs  equipment.rs  import_export.rs  ingredients.rs  library.rs  mash.rs  mod.rs  recipe_image.rs  recipes.rs  settings.rs  sync.rs  tools.rs  water_chemistry.rs
src-tauri/src/db/: additions.rs  equipment.rs  library.rs  mash.rs  mod.rs  recipes.rs  settings.rs  test_helpers.rs
src-tauri/src/entities/: batch_attachments.rs  batch_gravity_readings.rs  batches.rs  equipment_profiles.rs  fermentables.rs  hops.rs  mash_steps.rs  mashes.rs  miscs.rs  mod.rs  prelude.rs  recipe_addition_fermentables.rs  recipe_addition_hops.rs  recipe_addition_miscs.rs  recipe_addition_waters.rs  recipe_addition_yeasts.rs  recipe_version_fermentables.rs  recipe_version_hops.rs  recipe_version_mash.rs  recipe_version_mash_steps.rs  recipe_version_miscs.rs  recipe_version_water_adjustments.rs  recipe_version_waters.rs  recipe_version_yeasts.rs  recipe_versions.rs  recipe_water_adjustments.rs  recipes.rs  settings.rs  styles.rs  waters.rs  yeasts.rs
src-tauri/src/migration/: m001_initial.rs  m002_seed_data.rs  m002_water_chemistry.rs  m003_strike_temp.rs  m003_whirlpool_temp.rs  m004_hopstand_temp_rename.rs  m004_yeast_extended_fields.rs  mod.rs
src-tauri/src/repositories/: addition.rs  batch_attachments.rs  batches.rs  equipment.rs  fermentable.rs  hop.rs  ingredient.rs  library.rs  mash.rs  misc.rs  mod.rs  recipe.rs  recipe_version.rs  settings.rs  water.rs  water_chemistry.rs  yeast.rs
src-tauri/tests/fixtures/: alpha_dog.xml  american_amber_ale.xml  american_barleywine.xml  american_brown_ale.xml  american_pale_ale.xml  american_wheat.xml  belgian_tripel.xml  neipa.xml  (+18 more)
(+522 files in other folders)
